# haven-ai

./: .gitignore  README.md  conda.yaml  gcp_config.py  pyproject.toml  setup.py  trainval.py
benchmarks/counting/lcfcn/base_networks/: fcn8_vgg16.py
benchmarks/lcfcn/: exp_configs.py
benchmarks/lcfcn-trancos/lcfcn/: __init__.py
benchmarks/lcfcn/src/datasets/: trancos.py
benchmarks/lcfcn/src/models/: __init__.py  lcfcn_loss.py
haven/: haven_wizard.py
haven/haven_examples/: __init__.py
haven/haven_examples/datasets/: trancos.py
haven/haven_examples/models/lcfcn/: __init__.py
haven/haven_jobs/: __init__.py  gcp_manager.py
tests/: test_jobs_gcp.py
